# apertium-fin

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  ChangeLog  ChangeLog.old  Makefile.am  README  _config.yml  apertium-fin.fin.dix-b.html  apertium-fin.fin.dix-c.html  apertium-fin.fin.dix-d.html  apertium-fin.fin.dix-e.html  apertium-fin.fin.dix-f.html  apertium-fin.fin.dix-g.html  apertium-fin.fin.dix-i.html  apertium-fin.fin.dix-j.html  apertium-fin.fin.dix-n.html  apertium-fin.fin.dix-o.html  apertium-fin.fin.dix-q.html  apertium-fin.fin.dix-u.html  apertium-fin.fin.dix-w.html  apertium-fin.fin.dix-x.html  apertium-fin.fin.dix-y.html  apertium-fin.fin.dix-z.html  apertium-fin.fin.dix-ä.html  apertium-fin.fin.dix-å.html  apertium-fin.fin.dix-ö.html  apertium-fin.fin.dix.html  apertium-fin.fin.gen.twol  apertium-fin.fin.morf.twol  apertium-fin.fin.reweight  apertium-fin.fin.rlx  apertium-fin.fin.tag-relax.regex  apertium-fin.fin.twol  apertium-fin.pc.in  autogen.sh  configure.ac  coverages.bash  header.html  (+7 more)
_includes/: navigation.html
docs/: Makefile.am  _config.yml  apertium-fin.fin.dix-a.md  apertium-fin.fin.dix-b.html  apertium-fin.fin.dix-b.md  apertium-fin.fin.dix-c.html  apertium-fin.fin.dix-c.md  apertium-fin.fin.dix-d.html  apertium-fin.fin.dix-d.md  apertium-fin.fin.dix-e.html  apertium-fin.fin.dix-e.md  apertium-fin.fin.dix-f.html  apertium-fin.fin.dix-f.md  apertium-fin.fin.dix-g.html  apertium-fin.fin.dix-g.md  apertium-fin.fin.dix-h.md  apertium-fin.fin.dix-i.html  apertium-fin.fin.dix-i.md  apertium-fin.fin.dix-j.html  apertium-fin.fin.dix-j.md  apertium-fin.fin.dix-k.md  apertium-fin.fin.dix-l.md  apertium-fin.fin.dix-m.md  apertium-fin.fin.dix-n.html  apertium-fin.fin.dix-n.md  apertium-fin.fin.dix-o.html  apertium-fin.fin.dix-o.md  apertium-fin.fin.dix-p.md  apertium-fin.fin.dix-q.html  apertium-fin.fin.dix-q.md  apertium-fin.fin.dix-r.md  apertium-fin.fin.dix-s.md  apertium-fin.fin.dix-t.md  apertium-fin.fin.dix-u.html  apertium-fin.fin.dix-u.md  apertium-fin.fin.dix-v.md  apertium-fin.fin.dix-w.html  apertium-fin.fin.dix-w.md  apertium-fin.fin.dix-x.html  apertium-fin.fin.dix-x.md  (+14 more)
test/: fin-input.txt  fin-morph-expected.txt  tests.json
texts/: fin-ud-cairo.text  tarina.fin.disam-gold.cg3text  tarina.fin.text
