
if CAN_SAXON
# upstream d/l
monodix2html.xslt:
	wget https://raw.githubusercontent.com/flammie/apevis-xslt/$@

monodix2html-split.xslt:
	wget https://raw.githubusercontent.com/flammie/apevis-xslt/$@

$(BASENAME).$(LANG1).dix.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html.xslt
	$(SAXON) -s:$< monodix2html.xslt language=Finnish langcode=fin  > $@

$(BASENAME).$(LANG1).dix-a.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=a  > $@

$(BASENAME).$(LANG1).dix-b.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=b  > $@

$(BASENAME).$(LANG1).dix-c.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=c  > $@

$(BASENAME).$(LANG1).dix-d.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=d  > $@

$(BASENAME).$(LANG1).dix-e.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=e  > $@

$(BASENAME).$(LANG1).dix-f.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=f  > $@

$(BASENAME).$(LANG1).dix-g.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=g  > $@

$(BASENAME).$(LANG1).dix-h.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=h  > $@

$(BASENAME).$(LANG1).dix-i.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=i  > $@

$(BASENAME).$(LANG1).dix-j.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=j  > $@

$(BASENAME).$(LANG1).dix-k.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=k  > $@

$(BASENAME).$(LANG1).dix-l.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=l  > $@

$(BASENAME).$(LANG1).dix-m.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=m  > $@

$(BASENAME).$(LANG1).dix-n.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=n  > $@

$(BASENAME).$(LANG1).dix-o.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=o  > $@

$(BASENAME).$(LANG1).dix-p.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=p  > $@

$(BASENAME).$(LANG1).dix-q.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=q  > $@

$(BASENAME).$(LANG1).dix-r.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=r  > $@

$(BASENAME).$(LANG1).dix-s.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=s  > $@

$(BASENAME).$(LANG1).dix-t.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=t  > $@

$(BASENAME).$(LANG1).dix-u.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=u  > $@

$(BASENAME).$(LANG1).dix-v.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=v  > $@

$(BASENAME).$(LANG1).dix-w.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=w  > $@

$(BASENAME).$(LANG1).dix-x.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=x  > $@

$(BASENAME).$(LANG1).dix-y.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=y  > $@

$(BASENAME).$(LANG1).dix-z.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=z  > $@

$(BASENAME).$(LANG1).dix-å.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=å  > $@

$(BASENAME).$(LANG1).dix-ä.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=ä  > $@

$(BASENAME).$(LANG1).dix-ö.html: $(top_srcdir)/$(BASENAME).$(LANG1).dix monodix2html-split.xslt
	$(SAXON) -s:$< monodix2html-split.xslt language=Finnish langcode=fin letter=ö  > $@

endif

statistics.md: $(top_srcdir)/apertium-fin.fin.lexc
	echo "# Apertium-fin statistics" > $@
	echo >> $@
	echo "## Alphabets" >> $@
	echo >> $@
	$(AWK) '/Multichar_Symbols/,/LEXICON/ {print;}' $< |\
		egrep -v '^!.*' |\
		egrep -v '^$$' |\
		fgrep -v LEXICON |\
		fgrep -v Multichar_Symbols |\
		wc -l >> $@
	echo " symbols for tags." >> $@
	echo >> $@
	echo "## Lexemes" >> $@
	echo "Approximately " >> $@
	awk '/^LEXICON ADJ/,/^LEXICON ADJ_/ {print;}' $< |\
		egrep -v '^!.*' |\
		egrep -v '^$$' |\
		fgrep -v LEXICON |\
		wc -l >> $@
	echo " lexemes in there." >> $@
